Ignore all testing notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.jaml_cache
-test.ipynb
-.stfolder
-.stversions
+.jaml_cache/
+test*.ipynb
+.stfolder/
+.stversions/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
