--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^2.2.2"
 matplotlib = "^3.9.2"
 scipy = "^1.14.1"
 simple-slurm = "^0.2.7"
+sympy = "^1.14.0"
 
 [build-system]
 requires = ["poetry-core"]
